2014-07-16 Caolán McNamara <caolanm at LibO>:
	* moz#675553 Switch from PRBool to bool
	* moz#690892 replace PR_TRUE/PR_FALSE with true/false
	* Silence the warning about empty while body loop in clang
	* moz#777292 Make nsresult an enum 
	* moz#579517 Use stdint types in gecko
	* moz#784776 consistently use FLAG_NULL
	* moz#927728 Convert PRUnichar to char16_t
	* moz#943268 Remove nsCharsetAlias and nsCharsetConverterManager 
	* Don't include config.h in license.hunspell if MOZILLA_CLIENT is set

2014-06-26 Caolán McNamara <caolanm at LibO>:
	* clang scan-build: Allocator sizeof operand mismatch
	* clang scan-build: other low hanging warnings
	* clang scan-build: significant warnings

2014-06-02 Németh László <nemeth at numbertext dot org>:
	* escape spaces in paths of ODF files

2014-05-28 Németh László <nemeth at numbertext dot org>:
	* add long path/Unicode path support in WIN32 environment:
	- hunspell#233 (reported by mahak gark) and LibreOffice fdo#48017 
	* flat ODF support, eg.:
	  hunspell doc.fodt
	  cat doc.fodt | hunspell -l -O
	* new options:
	- -X (XML) input format
	- -O (ODF or flat ODF) input format
	- --check-apostrophe: check and force Unicode apostrophe usage
	  (ASCII or Unicode apostrophe has to be in the
	  WORDCHARS section of the affix file)
	* fix ODF support:
	- break 1-line XML of ODT documents at </style:style>, too,
	  not only at </text:p> (limiting tokenization problems, when
	  fgets stops within an XML tag)
	- show ODF file path on the UI instead of the temporary file
	* fix XML support:
	- ', ", &, < and > in replacements converted to XML entities
	- recognize &apos at tokenization, depending from WORDCHARS
	- &apos; in tokens converted to ' before spell checking and
	  in the output of the pipe interface
	* better apostrophe usage:
	- WORDCHARS only with one of the Unicode or ASCII apostrophe
	  results extended word tokenization: both of them will be part of
	  the words (if they are inside: eg. word's, but not words').